--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>YOURUSERNAME Bio</h1>
 <br>
 <br>
-<p>Please fill in a medium-length bio about yourself. We wil spend time with you soon, and we want to get to know you!</p>
+<p>In this paragraph, please fill in a medium-length bio about yourself. We will spend time with you soon, and we want to get to know you!</p>
