--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <h1>YOURUSERNAME Bio</h1>
 <br>
 <br>
-<p>Please fill in a medium-length bio about yourself. We wil spend time with you soon, and we want to get to know you!</p>
+<p>In this section, please fill in a medium-length bio about yourself. You can also include a picture. We will spend time with you soon, and we want to get to know you! </p>
+<br>
+<h3>Please answer the following prompt.</h3>
+<h5>How would you explain Git and GitHub to a novice?</h5>
+<p></p>
